[gd_scene load_steps=9 format=3 uid="uid://5opr061l3pjm"]

[ext_resource type="Script" path="res://Levels/TimeTrialEnd.gd" id="1_pbb0t"]
[ext_resource type="FontFile" uid="uid://dj8l8uk81jfik" path="res://fonts/MediumFont.tres" id="2_vk5ky"]
[ext_resource type="PackedScene" uid="uid://dm80pcxu7kvcx" path="res://Universal_Scenes/UI/Button.tscn" id="3_sqmn3"]

[sub_resource type="Animation" id="Animation_bm4hk"]
resource_name = "P1Better"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerInfo/Player1/P1Time:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.878431, 0.996078, 1, 1), Color(0.364706, 1, 0.0901961, 1), Color(0.878431, 0.996078, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerInfo/Player2/P2Time:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.878431, 0.996078, 1, 1), Color(0.83, 0.0913, 0.103611, 1), Color(0.878431, 0.996078, 1, 1)]
}

[sub_resource type="Animation" id="Animation_h4kic"]
resource_name = "P2Better"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerInfo/Player1/P1Time:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.878431, 0.996078, 1, 1), Color(0.83, 0.0913, 0.103611, 1), Color(0.878431, 0.996078, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerInfo/Player2/P2Time:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.878431, 0.996078, 1, 1), Color(0, 44.38, 0.02, 1), Color(0.878431, 0.996078, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0mot5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerInfo:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CheckpointTitle:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["CHECKPOINT 1:"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Winner:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerInfo/Player1/P1Time:theme_override_colors/font_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.878431, 0.996078, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerInfo/Player2/P2Time:theme_override_colors/font_color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.878431, 0.996078, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Winner:text")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["PLAYER 1"]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("PostGameOptions:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_rcpxk"]
resource_name = "ShowWinner"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerInfo:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Winner:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["PLAYER 1"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PostGameOptions:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x42op"]
_data = {
"P1Better": SubResource("Animation_bm4hk"),
"P2Better": SubResource("Animation_h4kic"),
"RESET": SubResource("Animation_0mot5"),
"ShowWinner": SubResource("Animation_rcpxk")
}

[node name="GhostLevelEnd" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pbb0t")

[node name="Backdrop" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.00784314, 0.0627451, 0.0941176, 1)

[node name="SceneTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_top = 50.0
offset_right = 400.0
offset_bottom = 153.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0.741176, 1, 1)
theme_override_fonts/font = ExtResource("2_vk5ky")
theme_override_font_sizes/font_size = 100
text = "Level Complete"
uppercase = true

[node name="CheckpointTitle" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -507.5
offset_top = 250.0
offset_right = 507.5
offset_bottom = 353.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0.741176, 1, 1)
theme_override_fonts/font = ExtResource("2_vk5ky")
theme_override_font_sizes/font_size = 75
text = "CHECKPOINT 1:"
horizontal_alignment = 1
uppercase = true

[node name="PlayerInfo" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -590.0
offset_top = -10.0
offset_right = 590.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2

[node name="Player1" type="HBoxContainer" parent="PlayerInfo"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0
alignment = 1
metadata/_edit_group_ = true

[node name="P1Time" type="Label" parent="PlayerInfo/Player1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 11
theme_override_colors/font_color = Color(0.878431, 0.996078, 1, 1)
theme_override_fonts/font = ExtResource("2_vk5ky")
theme_override_font_sizes/font_size = 100
text = "00:00:00:00"
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="PlayerInfo"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Player2" type="HBoxContainer" parent="PlayerInfo"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0
metadata/_edit_group_ = true

[node name="P2Time" type="Label" parent="PlayerInfo/Player2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 11
theme_override_colors/font_color = Color(0.878431, 0.996078, 1, 1)
theme_override_fonts/font = ExtResource("2_vk5ky")
theme_override_font_sizes/font_size = 100
text = "00:00:00:00"
horizontal_alignment = 2
uppercase = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_x42op")
}

[node name="Winner" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -507.5
offset_top = 400.0
offset_right = 507.5
offset_bottom = 503.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0.741176, 1, 1)
theme_override_fonts/font = ExtResource("2_vk5ky")
theme_override_font_sizes/font_size = 75
text = "PLAYER 1"
horizontal_alignment = 1
uppercase = true

[node name="PostGameOptions" type="HBoxContainer" parent="."]
z_index = 7
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -465.0
offset_top = -90.0
offset_right = 465.0
offset_bottom = -33.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 0

[node name="ReturnButton" parent="PostGameOptions" instance=ExtResource("3_sqmn3")]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Back to Main Menu"

[connection signal="pressed" from="PostGameOptions/ReturnButton" to="." method="_on_return_button_pressed"]
